uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/RCS_Reference_Result__c.object-meta.xml
<CustomObject>
    <description>This object stores the responses of the questionnaire sent to the references.</description>
    <label>Reference Result</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Reference Results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>