uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Analyze_Complex_Info_Details__c.field-meta.xml
<CustomField>
    <fullName>Analyze_Complex_Info_Details__c</fullName>
    <description>Fail details / elaboration for Field 7</description>
    <label>Analyze Complex Info Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>