uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Analyze_Complex_Info_Rating__c.field-meta.xml
<CustomField>
    <fullName>Analyze_Complex_Info_Rating__c</fullName>
    <description>How would you rate…ability to analyze complex…</description>
    <label>Analyze Complex Info Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Unable to Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>