uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Apply_KSA_Details__c.field-meta.xml
<CustomField>
    <fullName>Apply_KSA_Details__c</fullName>
    <description>Fail details / elaboration for Field 9</description>
    <label>Apply KSA Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>