uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Call_Back_Number__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Number__c</fullName>
    <description>Phone to be contacted</description>
    <label>Call Back Number</label>
    <type>Phone</type>
</CustomField>