uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>Reference_Type__c</fullName>
    <description>Please select the type of reference…</description>
    <label>Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employment/Professional</fullName>
            </value>
            <value>
                <fullName>Academic/Mentor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>