uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Reliable_and_Professional__c.field-meta.xml
<CustomField>
    <fullName>Reliable_and_Professional__c</fullName>
    <description>Do you believe the candidate was reliable…</description>
    <label>Reliable and Professional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>