uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Reliable_Professional_Details__c.field-meta.xml
<CustomField>
    <fullName>Reliable_Professional_Details__c</fullName>
    <description>If no, why?” for Field 13</description>
    <label>Reliable Professional Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>