uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the originating request record</description>
    <label>Request</label>
    <referenceTo>Appointment_Request__c</referenceTo>
    <relationshipLabel>Reference Results</relationshipLabel>
    <relationshipName>Reference_Results</relationshipName>
    <type>Lookup</type>
</CustomField>