uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Selectee__c.field-meta.xml
<CustomField>
    <fullName>Selectee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the selectee/candidate record</description>
    <label>Selectee</label>
    <referenceTo>Selectee__c</referenceTo>
    <relationshipLabel>Reference Results</relationshipLabel>
    <relationshipName>Reference_Results</relationshipName>
    <type>Lookup</type>
</CustomField>