uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Time_Period_With_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Time_Period_With_Candidate__c</fullName>
    <description>Please provide the time period…</description>
    <label>Time Period With Candidate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>