uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Timely_Completion_Details__c.field-meta.xml
<CustomField>
    <fullName>Timely_Completion_Details__c</fullName>
    <description>Fail details / elaboration for Field 11</description>
    <label>Timely Completion Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>