uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Timely_Completion_Rating__c.field-meta.xml
<CustomField>
    <fullName>Timely_Completion_Rating__c</fullName>
    <description>How would you rate…ability to routinely complete…in a timely manner…</description>
    <label>Timely Completion Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Unable to Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>