uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Title_Organization__c.field-meta.xml
<CustomField>
    <fullName>Title_Organization__c</fullName>
    <description>Please provide your title/organization...</description>
    <label>Title Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>