uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Would_Hire_Again__c.field-meta.xml
<CustomField>
    <fullName>Would_Hire_Again__c</fullName>
    <description>Would you hire the candidate or work with them again…</description>
    <label>Would Hire Again</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>