uspto-ohrs/main/schema/objects/RCS_Reference_Result__c/fields/Would_Hire_Again_Details__c.field-meta.xml
<CustomField>
    <fullName>Would_Hire_Again_Details__c</fullName>
    <description>If no, why?” for Field 15</description>
    <label>Would Hire Again Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>